# pyrotation

./: README.md  conversion .py  conversion.py  core.py  pyproject.toml  quaternions.py
src/pyrotation/: __init__.py  conversion.py  core.py  quaternions.py
test/: convert_test.py
